[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Furniture/Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Armatures/ArmatureMale.tscn" type="PackedScene" id=4]
[ext_resource path="res://SFX/harp-glissando-up.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.311896
height = 0.736439

[node name="Player" index="0" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 25
script = ExtResource( 2 )

[node name="Camera" parent="." index="0" instance=ExtResource( 3 )]
transform = Transform( -0.984808, 0.0449435, -0.167731, 0, 0.965926, 0.258819, 0.173648, 0.254887, -0.951251, 0, 3, -6 )

[node name="MeshInstance" parent="." index="1"]
visible = false

[node name="Armature" parent="." index="3" instance=ExtResource( 4 )]
transform = Transform( 0.27, 0, 0, 0, -1.18021e-008, -0.27, 0, 0.27, -1.18021e-008, 0, -1, 0 )

[node name="AnimationTree" parent="Armature" index="2"]
parameters/Idle_Walk/blend_amount = 0.59
parameters/Punch_Refill/blend_amount = 1.0

[node name="Forward" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.056, 0.5, 1 )

[node name="RefillTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="Harp" type="AudioStreamPlayer3D" parent="." index="7"]
stream = ExtResource( 5 )
pitch_scale = 6.0
attenuation_filter_cutoff_hz = 2000.0

[node name="CollisionShape2" type="CollisionShape" parent="." index="9"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, -0.287727, -1.2577e-008 )
shape = SubResource( 1 )
disabled = true
[connection signal="timeout" from="RefillTimer" to="." method="_on_RefillTimer_timeout"]

[editable path="Armature"]
